# VirusTotalHashScanner

./: .gitignore  README.md  config_example.ini  main.py  pyproject.toml  requirements.txt
utils/: AI.py  config.py  hash.py  logger.py  parser.py  report.py  scan.py
